package org.jailbreak.api.representations;

option java_outer_classname = "Representations";

message AuthService {
	optional string facebook_tokens_url = 1;
	optional string authenticate_url = 2;
	optional string users_url = 3;
}

message FacebookAuthToken {
	optional string access_token = 1;
	optional int64 user_id = 2; 
}

message ApiToken {
	optional string api_token = 1;
	optional int64 user_id = 2;
	optional int64 expires = 3;
}

message User {
	enum UserLevel {
		SUPERADMIN = 0;
		ADMIN = 1;
		TRACKER = 2;
		NORMAL = 3;
	}
	
	enum Gender {
		MALE = 0;
		FEMALE = 1;
		OTHER = 2;
	}
	
	optional int64 user_id = 1;
	optional int64 time_created = 2;
	optional UserLevel user_level = 3;
	optional string email = 4;
	optional string first_name = 5;
	optional string last_name = 6;
	optional Gender gender = 7;
	optional int32 timezone = 8;
	optional string locale = 9;
	optional string facebook_link = 10;
	optional string api_tokens_url = 11;
	optional string href = 12;
}
